# organelle-svg

./: .gitignore  LICENSE  README.md  pyproject.toml
organelle_svg/: __main__.py  api.py  band_utils.py  bands.py  bio_sff.py  cli.py  config.py  histograms.py  irscan.py  normal_svg.py  og_colors.py  ogdraw_svg.py  pairs_svg.py  stacked_svg.py  svg.py  svg_colors.py  svg_utils.py
