[project]
name = "organelle-svg"
version = "0.9.2"
description = "Generate pictures of Organelle DNA"
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    "Programming Language :: Python :: 3 :: Only",
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Topic :: Scientific/Engineering :: Medical Science Apps.',
]
dependencies = [
    "click>=8.1.3,<9",
    "biopython>=1.87,<2",
    "intervaltree>=3.2.1,<4",
    "sortedcontainers>=2.4.0,<3",
    "bcbio-gff>=0.7.1,<1",
]

[project.urls]
Repository = "https://github.com/arabidopsis/organelle-svg.git"

[project.scripts]
organelle-svg = "organelle_svg.__main__:cli"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
